--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -76,6 +76,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12" style="padding:15px 0;">
+                    <div style="padding:0;" ng-class="{'col-xs-6': sample.halfsize, 'col-xs-12': !sample.halfsize}">
+                        <div class="" style="display:inline-block;width:100%;height:630px;">
+                            <richcc-datepicker datepicker-options="sample.dtPickerOptions2" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
+                        </div>
+                    </div>
+                </div>
             </div>            
         </div>        
         <div style="display:block; height:630px;width:1460px;margin:30px auto;">
@@ -86,14 +93,7 @@
                         <richcc-year datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-year>
                     </div>
                 </div>
-            </div>
-            <!--<div class="col-xs-12">
-                <div style="padding:0;" ng-class="{'col-xs-6': sample.halfsize, 'col-xs-12': !sample.halfsize}">
-                    <div class="" style="display:inline-block;width:100%;height:630px;">
-                        <richcc-datepicker datepicker-options="sample.dtPickerOptions2" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
-                    </div>
-                </div>
-            </div>-->
+            </div>            
         </div>
     </div>
     <div class="clearfix"></div>
