--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -57,7 +57,7 @@
                 </tr>
                 <tr class="header-dayname-row">
                     <th ng-if="showWeeks && false" class="text-center"></th>
-                    <th colspan="1" ng-repeat="label in labels track by $index" class="text-center dayTitle"><span aria-label="{{label.full}}">{{label.abbr | limitTo:1}}</span></th>
+                    <th colspan="1" ng-repeat="label in labels track by $index" class="text-center dayTitle"><span aria-label="{{label.full}}" ng-if="light != true">{{label.abbr | limitTo:3}}</span><span ng-if="light == true" aria-label="{{label.full}}">{{label.abbr | limitTo:2}}</span></th>
                     <th colspan="1" ng-if="light == true"></th>
                 </tr>
             </thead>
