Adding Event Time Meta Data

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -366,6 +366,7 @@
                             <div class="event-timing-holder" ng-if="event.isHoliday != true">
                                 <span class="event-time">{{event._startDt | date:eventPopupSettings.dateFilter}}</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event._endDt | date: eventPopupSettings.dateFilter}}</span>
                             </div>
+                            <span class="event-time" style="text-transform:none;">{{event.timeMetaData}}</span>
                             <div class="event-timing-holder" ng-if="event.isHoliday == true">
                                 <span class="event-time holiday">{{event.holidayType}}</span>
                             </div>
@@ -392,6 +393,7 @@
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}" ng-class="{ 'highlightBorder': event.highlightBorder}">
                             <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
+                            <span class="event-time" style="text-transform:none;">{{event.timeMetaData}}</span>
                             <div class="event-timing-holder">
                                 <span class="event-time">{{event._startDt | date: parent.eventPopupSettings.dateFilter}}</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event._endDt | date: parent.eventPopupSettings.dateFilter}}</span>
                             </div>
