--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -36,7 +36,7 @@
     </div>
     <!--day.html-->
     <div id="richccTmplDay">
-        <table class="uib-daypicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light,'collapsed-mode': !expandedMode,  'expanded-mode': expandedMode}">
+        <table class="uib-daypicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="" ng-class="{'richcc-light': light,'collapsed-mode': !expandedMode,  'expanded-mode': expandedMode}" id="{{datePickerUID}}">
             <thead>
                 <tr class="header-action-holder" ng-class="{'richcc-light': light,'collapsed-mode': !expandedMode,  'expanded-mode': expandedMode}">
                     <th colspan="1" ng-if="light != true"></th>
@@ -64,9 +64,9 @@
             <tbody>
                 <tr class="uib-weeks richcc-row" ng-repeat="row in rows track by $index" ng-init="rowindex = $index" ng-class="{'collapsed-mode': !expandedMode, 'expanded-mode': expandedMode}">
                     <td ng-if="showWeeks && false" class="text-center h6"><em>{{weekNumbers[$index] }}</em></td>
-                    <td ng-repeat="dt in row track by $index" class="uib-day text-center richcc-td" role="gridcell"
+                    <td ng-repeat="dt in row track by $index" class="uib-day text-center richcc-td {{dt.customClass}}" role="gridcell"
                         id="{{dt.uid}}"
-                        ng-class="dt.customClass"
+                        ng-class="{'cc-focus': dt.key == activeDt.key}"
                         colspan="1"
                         tabindex="0"
                         ng-disabled="dt.disabled"
@@ -78,23 +78,20 @@
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForDayMap(rowindex, columnindex)}}"
                         popover-class="richcc-popup-container">
+                        <span class="date-num"></span>
                         <div class="richcc-icon-container dayHolder"
-                             uib-is-class="
-                             'cc-info' for selectedDt,
-                             'cc-active' for activeDt
-                             on dt"
                              ng-class="{'cc-current': dt.current, 'cc-muted': dt.secondary}"
-                             ng-if="light != true">
+                             ng-if="light != true" aria-hidden="true">
                             <div class="richcc-day">
                                 <span>{{dt.label}}</span>
                             </div>
                         </div>
-                        <div class="richcc-time-label" ng-show="showDataLabel == true && light != true">
+                        <div class="richcc-time-label" ng-show="showDataLabel == true && light != true" aria-hidden="true">
                             <span ng-show="dataLabels[dt.key]">{{dataLabels[dt.key]}}</span>
                             <span ng-hide="dataLabels[dt.key]">{{defaultDataLabel}}</span>
                             <span class="customIconClass" ng-class="dt.customIconClass"></span>
                         </div>
-                        <div class="markHolder pointerNone" ng-show="eventDetails[dt.key].length > 0" ng-if="expandedMode == true">
+                        <div class="markHolder pointerNone" ng-show="eventDetails[dt.key].length > 0" ng-if="expandedMode == true" aria-hidden="true">
                             <div class="mark step-{{event.step}}"
                                  ng-attr-step="{{ event.step}}"
                                  ng-attr-order="{{ event.order}}"
@@ -111,7 +108,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="markHolder pointerNone" style="position:relative;" ng-show="eventDetails[dt.key].length > 0" ng-if="expandedMode != true">
+                        <div class="markHolder pointerNone" style="position:relative;" ng-show="eventDetails[dt.key].length > 0" ng-if="expandedMode != true" aria-hidden="true">
                             <div class="mark step-{{event.step}}"
                                  ng-class="{'top': event.order == 1, 'bottom': event.order == 2}"
                                  ng-style="{'color': event.color, 'width': light != true ?  'calc(' + 100 * event.paintBoxLength + '% - 8px)' : 'calc(' + 100 * event.paintBoxLength + '% - 20px)'}"
@@ -125,7 +122,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 0 && showMarkerForMoreEvents != false">
+                            <div class="mark morePresent" ng-show="eventDetails[dt.key].length > 0 && showMarkerForMoreEvents != false" aria-hidden="true">
                                 <!--<div class="richcc-icon-container">
                                     <i class="richcc-icon icon-more"></i>
                                 </div>-->
@@ -145,7 +142,7 @@
     </div>
     <!--monthEventViewer.html-->
     <div id="richccTmplMonthEventViewer">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
             <thead style="height:0 !important; margin:0;padding:0;line-height:0;">
                 <tr class="header-action-holder" style="height:0 !important; margin:0;padding:0;line-height:0;">
                     <th colspan="1" class="w48" style="height:0 !important; margin:0;padding:0;line-height:0;"></th>
@@ -194,7 +191,7 @@
     </div>
     <!--monthEventWrap.html-->
     <div id="richccTmplMonthEventWrap">
-        <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+        <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="">
             <thead>
                 <tr class="header-action-holder">
                     <th colspan="1"></th>
@@ -233,7 +230,7 @@
     </div>
     <!--monthHeatViewer.html-->
     <div id="richccTmplMonthHeatViewer">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
             <thead>
                 <tr class="header-action-holder">
                     <th colspan="7" cc-key="monthSelectCallback()">{{parent.monthViewData[monthIndex].dt.label | limitTo:3}}</th>
@@ -264,7 +261,7 @@
     </div>
     <!--monthHeatWrap.html-->
     <div id="richccTmplMonthHeatWrap">
-        <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+        <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="">
             <thead>
                 <tr class="header-action-holder">
                     <th colspan="1" class="w48"></th>
@@ -304,7 +301,7 @@
     </div>
     <!--monthViewerDayMarker.html-->
     <div id="richccTmplMonthViewerDayMarker">
-        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
+        <table class="uib-daypicker richcc-monthviewer" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="" ng-class="{'richcc-light': light}" ng-init="parent = $parent">
             <thead ng-if="yearMapHeat == true">
                 <tr class="header-action-holder">
                     <th colspan="1">&nbsp;</th>
@@ -412,7 +409,7 @@
     </div>
     <!--year.html-->
     <div id="richccTmplYear">
-        <table class="uib-yearpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="{{activeDateId}}">
+        <table class="uib-yearpicker richcc-daypicker" role="grid" aria-labelledby="{{uniqueId}}-title" aria-activedescendant="">
             <thead>
                 <tr class="header-action-holder">
                     <th colspan="1"></th>
@@ -458,7 +455,7 @@
     <div id="richccTmplYearHybridOne">
         <div class="uib-datepicker richcc-datepicker fixedWidth" role="application" ng-keydown="keydown($event)" ng-attr-id="{{::ricchYear.rid}}" ng-keyup="ricchYear.keyup($event)">
             <div class="richcc-cal-holder">
-                <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{::activeDateId}}" style="width:100%;height:100%;">
+                <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="" style="width:100%;height:100%;">
                     <thead>
                         <tr class="header-action-holder">
                             <th colspan="43">
@@ -480,7 +477,7 @@
                         <tr class="uib-months h40" style="height: 24px;">
                             <td class="w48" colspan="1"></td>
                             <td colspan="7" ng-repeat="rindex in ::ricchYear.numOfWeeks track by $index">
-                                <table class="uib-daypicker richcc-year-top-head" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="{{::activeDateId}}" ng-class="{'richcc-light': light}">
+                                <table class="uib-daypicker richcc-year-top-head" role="grid" aria-labelledby="{{::uniqueId}}-title" ng-class="{'richcc-light': light}">
                                     <thead style="height:0 !important; margin:0;padding:0;line-height:0;">
                                         <tr class="header-action-holder" style="height:0 !important; margin:0;padding:0;line-height:0;">
                                             <th colspan="1" class="w48" style="height:0 !important; margin:0;padding:0;line-height:0;"></th>
