--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6" style="padding:0;width:801px;" ng-if="true">
+                <div class="col-xs-6" style="padding:0;width:801px;" ng-if="false">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
                         <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
                     </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12" style="padding:15px 0;" ng-if="false">
+                <div class="col-xs-12" style="padding:15px 0;" ng-if="true">
                     <div style="padding:0;" ng-class="{'col-xs-6': sample.halfsize, 'col-xs-12': !sample.halfsize}">
                         <div class="" style="display:inline-block;width:100%;height:630px;">
                             <richcc-datepicker datepicker-options="sample.dtPickerOptions2" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
