a11y fixes - yearly view

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -363,7 +363,7 @@
             <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
                 <div class="event-container-label">{{dt.date | date:eventPopupSettings.labelDateFilter}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} <span ng-show="eventDetails[dt.key].length != 1">Events</span><span ng-show="eventDetails[dt.key].length == 1">Event</span>)</span></div>
                 <div class="event-details-container">
-                    <div class="event-detail" ng-repeat="event in eventDetails[dt.key] | orderBy:'isHoliday' track by $index" ng-click="popUpEventClickHandler(dt, event)" ng-class="{'event-holiday' : event.isHoliday}" ng-style="{'background-color': (event.isHoliday ? event.bgcolor: '#fff')}">
+                    <div class="event-detail" tabindex="0" ng-repeat="event in eventDetails[dt.key] | orderBy:'isHoliday' track by $index" ng-click="popUpEventClickHandler(dt, event)" ng-class="{'event-holiday' : event.isHoliday}" ng-style="{'background-color': (event.isHoliday ? event.bgcolor: '#fff')}">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}" ng-class="{ 'highlightBorder': event.highlightBorder}">
                             <span class="event-title">{{event.name}}</span><span ng-if="event.isHoliday != true"> : </span><span class="event-subject" ng-if="event.isHoliday != true">{{event.subject}}</span>
@@ -460,9 +460,9 @@
 
     </div>
     <div id="richccTmplYearHybridOne">
-        <div class="uib-datepicker richcc-datepicker fixedWidth" role="application" ng-keydown="keydown($event)" ng-attr-id="{{::ricchYear.rid}}" ng-keyup="ricchYear.keyup($event)">
+        <div class="uib-datepicker richcc-datepicker fixedWidth" role="application" ng-keydown="ricchYear.keydown($event)" ng-attr-id="{{::ricchYear.rid}}" ng-keyup="ricchYear.keyup($event)">
             <div class="richcc-cal-holder">
-                <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="" style="width:100%;height:100%;">
+                <table class="uib-monthpicker richcc-daypicker" role="grid" aria-labelledby="{{::uniqueId}}-title" aria-activedescendant="" style="width:100%;height:100%;" tabindex="0" ng-attr-id="{{dtPickerYearID}}">
                     <thead>
                         <tr class="header-action-holder">
                             <th colspan="43">
