--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -27,7 +27,7 @@
         <div class="uib-datepicker richcc-datepicker" ng-switch="datepickerMode" role="application" ng-keydown="keydown($event)" ng-class="{'richcc-light': light,'collapsed-mode': !expandedMode,  'expanded-mode': expandedMode}">
             <div class="richcc-comp-title">&nbsp;</div>
             <div class="richcc-cal-holder" ng-class="{'richcc-light': light,'collapsed-mode': !expandedMode,  'expanded-mode': expandedMode}">
-                <richcc-daypicker ng-switch-when="day" tabindex="0"></richcc-daypicker>
+                <richcc-daypicker ng-switch-when="day" tabindex="{{stopHighlight == true ? -1 : 0}}"></richcc-daypicker>
                 <richcc-monthpicker-heatmap ng-switch-when="month" ng-if="yearMapHeat == true" tabindex="0"></richcc-monthpicker-heatmap>
                 <richcc-monthpicker-eventmap ng-switch-when="month" ng-if="yearMapHeat == false" tabindex="0"></richcc-monthpicker-eventmap>
                 <richcc-yearpicker ng-switch-when="year" tabindex="0"></richcc-yearpicker>
@@ -79,6 +79,7 @@
                         ng-click="richccDaySelected(dt, eventDetails[dt.key])"
                         ng-keyup="richccDaySelectedKeyUp($event, dt, eventDetails[dt.key])"
                         ng-keydown="richccDaySelectedKeyUp($event, dt, eventDetails[dt.key])"                        
+                        aria-label="{{dt.dtAriaLabel}} {{eventDetails[dt.key].length > 0 ? eventDetails[dt.key].length + ' events ' : '' }}"
                         uib-popover-template="dayPopUpTmpl"
                         popover-trigger="{{popUpTrigger(eventDetails[dt.key])}}"
                         popover-append-to-body="true"
