--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -49,7 +49,7 @@
     <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
         <div style="display:block; height:630px;width:1460px;margin:30px auto;" ng-if="sample.showMode">
             <div class="col-xs-12">
-                <div class="col-xs-3" style="padding:0;width:300px;" ng-if="true">
+                <div class="col-xs-3" style="padding:0;width:300px;" ng-if="false">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:315px">
                             <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight" ng-model="sample.dtLight3" events="sample.sampleEvents" event-popup-settings="sample.popupSettings" class="well well-sm"></richcc-datepicker>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6" style="padding:0;width:801px;" ng-if="true">
+                <div class="col-xs-6" style="padding:0;width:801px;" ng-if="false">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
                         <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
                     </div>
