--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -66,7 +66,7 @@
                         <richcc-datepicker datepicker-options="sample.dtPickerOptions1" ng-model="sample.dt" event-popup-settings="sample.popupSettings" day-labels="sample.labelData" events="sample.sampleEvents" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
                     </div>
                 </div>
-                <div class="col-xs-3" style="padding:0;width:300px;" ng-if="false">
+                <div class="col-xs-3" style="padding:0;width:300px;" ng-if="true">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:315px">
                             <richcc-datepicker datepicker-options="sample.dtPickerOptionsLight" ng-model="sample.dtLight1" events="sample.sampleEvents" event-popup-settings="sample.popupSettings" class="well well-sm"></richcc-datepicker>
