--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -43,7 +43,7 @@
                     <th colspan="1" ng-if="light != true"></th>
                     <th colspan="{{light == true ? 8 : 5}}">
                         <div class="header-actions" ng-class="{'calNavHidden' : hideCalNav == true}">
-                            <button class="richcc-icon-container nav-left" cc-key="move(-1)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                            <button class="richcc-icon-container nav-left" cc-key="move(-1, $event)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                                 <span class="offscreen" >Move to previous <span ng-if="datepickerMode == 'day'"> month</span><span ng-if="datepickerMode == 'month'"> year</span></span>
                             </button>
@@ -51,7 +51,7 @@
                                 <span class="title">{{title}}</span>
                                 <span class="offscreen"> use arrow keys to move </span>
                             </button>
-                            <button class="richcc-icon-container nav-right" cc-key="move(1)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
+                            <button class="richcc-icon-container nav-right" cc-key="move(1, $event)" ng-disabled="preventCalNav == true" ng-hide="hideCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                                 <span class="offscreen">Move to next <span ng-if="datepickerMode == 'day'"> month</span><span ng-if="datepickerMode == 'month'"> year</span></span>
                             </button>
@@ -206,13 +206,13 @@
                     <th colspan="1"></th>
                     <th colspan="4">
                         <div class="header-actions">
-                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
                             <div class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            <div class="richcc-icon-container nav-right" cc-key="move(1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
@@ -277,13 +277,13 @@
                     <th colspan="1"></th>
                     <th colspan="4">
                         <div class="header-actions">
-                            <div class="richcc-icon-container nav-left" cc-key="move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            <div class="richcc-icon-container nav-left" cc-key="move(-1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </div>
                             <div class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode" tabindex="0">
                                 <label class="title">{{title}}</label>
                             </div>
-                            <div class="richcc-icon-container nav-right" cc-key="move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                            <div class="richcc-icon-container nav-right" cc-key="move(1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </div>
                         </div>
@@ -431,13 +431,13 @@
                     <th colspan="1"></th>
                     <th colspan="3">
                         <div class="header-actions">
-                            <button class="richcc-icon-container nav-left" cc-key="move(-1)" ng-disabled="preventCalNav == true">
+                            <button class="richcc-icon-container nav-left" cc-key="move(-1, $event)" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                             </button>
                             <button class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="datepickerMode === maxMode">
                                 <label class="title">{{title}}</label>
                             </button>
-                            <button class="richcc-icon-container nav-right" cc-key="move(1)" ng-disabled="preventCalNav == true">
+                            <button class="richcc-icon-container nav-right" cc-key="move(1, $event)" ng-disabled="preventCalNav == true">
                                 <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                             </button>
                         </div>
@@ -476,7 +476,7 @@
                         <tr class="header-action-holder">
                             <th colspan="43">
                                 <div class="header-actions">
-                                    <div class="richcc-icon-container nav-left" ng-click="ricchYear.move(-1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                    <div class="richcc-icon-container nav-left" ng-click="ricchYear.move(-1, $event)" ng-keydown="ricchYear.moveKeyDown(-1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                         <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                                         <span class="offscreen">Move to previous year {{ricchYear.currentYear - 1}}</span>
                                     </div>
@@ -484,7 +484,7 @@
                                         <p class="title">{{ricchYear.title}}</p>
                                         <span class="offscreen"> use arrow keys to move </span>
                                     </div>
-                                    <div class="richcc-icon-container nav-right" ng-click="ricchYear.move(1)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
+                                    <div class="richcc-icon-container nav-right" ng-click="ricchYear.move(1, $event)" ng-keydown="ricchYear.moveKeyDown(1, $event)" role="button" tabindex="0" ng-disabled="preventCalNav == true">
                                         <i class="richcc-icon icon-ScrollChevronRightLegacy"></i>
                                         <span class="offscreen">Move to next year {{ricchYear.currentYear + 1}}</span>
                                     </div>
