Aria Label Fixes

--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -47,7 +47,7 @@
                                 <i class="richcc-icon icon-ScrollChevronLeftLegacy"></i>
                                 <span class="offscreen" >Move to previous <span ng-if="datepickerMode == 'day'"> month</span><span ng-if="datepickerMode == 'month'"> year</span></span>
                             </button>
-                            <button class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" role="heading" aria-live="assertive" aria-atomic="true" type="button" cc-key="toggleMode()" ng-disabled="preventModeToggle == true" >
+                            <button class="richcc-icon-container labelHolder" id="{{uniqueId}}-title" aria-live="assertive" aria-atomic="true" cc-key="toggleMode()" ng-disabled="preventModeToggle == true" >
                                 <span class="title">{{title}}</span>
                                 <span class="offscreen" ng-if="stopHighlight != true"> use arrow keys to move </span>
                             </button>
